Some suggested CSS fixes by :MattN for the theme. Make pointer events wrap around language menu div, and do not make the language menu show up in overview mode.

--- a/html5/themes/mozilla/styles/style.css
+++ b/html5/themes/mozilla/styles/style.css
@@ -765,6 +765,9 @@ ul.inline li:last-child::after {
   display: block;
 }
 
+#langMenuId {
+  pointer-events: auto;
+}
 
 #langMenuDivId {
   position: absolute;
@@ -772,4 +775,9 @@ ul.inline li:last-child::after {
   right: 0px;
   text-align: center;
   bottom: 36px;
+  pointer-events: none;
+}
+
+.list #langMenuDivId {
+  display: none;
 }
